--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,9 +7,14 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.7.9",
+    "date-fns": "^4.1.0",
+    "postprocessing": "^6.36.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-router-dom": "^7.1.5",
     "react-scripts": "5.0.1",
+    "three": "^0.167.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
